--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --hamburger-width: max(25px, calc(10vh - 20px));
     --hamburger-height: calc(var(--hamburger-total-height)/9);
     --hamburger-gap: calc((var(--hamburger-total-height) - (3 * var(--hamburger-height))) / 2);
-    --hamburger-total-height: max(25px, calc(10vh - 30px));
+    --hamburger-total-height: max(25px, calc(6vh - 30px));
     --nav-anim-timing: .5s ease-in-out;
     --font-family-a: "Urbanist", sans-serif;
     --font-family-b: "Aldrich", sans-serif;
@@ -40,7 +40,7 @@
     height: 100vh;
     font-family:  var(--font-family-a);
     color: var(--white);
-    background: var(--black);
+    background: var(--dark-gradiant) /* rgb(56, 56, 56) */;
     letter-spacing: .2rem;
   }
 
@@ -386,7 +386,7 @@
     position: fixed;
     left: 0;
     width: 100%;
-    height: 10vh;
+    height: 60px;
     min-height: 40px;
     background: var(--black);
     display: flex;
@@ -404,7 +404,7 @@
     flex-direction: column;
     align-items: top;
     justify-content: left;
-    top:10vh;
+    top: 6vh;
     left: 21vw;
     width: 80vw;
     min-height: 90vh;
@@ -847,7 +847,7 @@
     width: 100%;
     height: 10vh;
     min-height: 40px;
-    max-height: 80px;
+    max-height: 60px;
     background: var(--black);
     display: flex;
     align-items: center;
@@ -876,7 +876,7 @@
   .logo {
     position: absolute;
     margin-right: 3vw;
-    top: 10px; /* Overlaps bottom edge */
+    top: 5px; /* Overlaps bottom edge */
     left: 10px;
     min-height: 50px;
     min-width: 50px;
