--- a/style.css
+++ b/style.css
@@ -1124,8 +1124,9 @@
     min-height: 90px;
     min-width: 90px;
     max-height: 450px;
-    width: 10vw;
-    height: 10vw;
+    width: 4vw;
+    height: auto;
+    aspect-ratio: 1 / 1;
     background-image: url("Assets/Images/SchwenzerLogo1.png");
     background-size: contain;
     background-position: center;
@@ -1366,9 +1367,9 @@
   .logo {
     position: absolute;
     margin-right: 3vw;
-    top: 20px; /* Overlaps bottom edge */
+    top: 10px; /* Overlaps bottom edge */
     left: 20px;
-    width: 10vw;
+    width: 3vw;
     height: auto;
     aspect-ratio: 1 / 1;
     min-height: 90px;
