--- a/bsp-style.css
+++ b/bsp-style.css
@@ -101,6 +101,9 @@ h1 {
 .album-card > div {
   margin: 0 auto 10px;
   width: 91%;
+  aspect-ratio: 91 / 18;
+  max-height: 36px;
+  font-size: 75%;
 }
 
 .album-card {
@@ -132,7 +135,7 @@ h1 {
 .modal {
   display: flex;
   position: fixed;
-  z-index: 10;
+  z-index: 9999;
   left: 0; top: 0; right: 0; bottom: 0;
   background: rgba(0,0,0,0.45);
   align-items: center;
@@ -159,7 +162,6 @@ h1 {
   position: relative;
   justify-content: flex-start;
   align-items: center !important;
-  z-index: 9999;
 
 }
 
