--- a/bsp-style.css
+++ b/bsp-style.css
@@ -90,6 +90,10 @@ h1 {
   height: auto !important;
 }
 
+#album-list > .album-card:nth-child(even){
+  flex-grow: 2 !important;
+}
+
 .album-card:hover {
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.39); 
   z-index: 50;  
@@ -116,7 +120,7 @@ h1 {
 .album-thumb {
   position: relative;
   width: 100%;
-  height: auto;
+  height: 100%;
   aspect-ratio: 1 / 1;
   object-fit: cover;
 }
@@ -161,6 +165,7 @@ h1 {
   background-position: center;
   position: absolute;
   width: 20% !important;
+  max-width: 100px;
   height: auto;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
