--- a/bsp-style.css
+++ b/bsp-style.css
@@ -77,7 +77,7 @@ h1 {
   z-index: 100;
   color: black;
   box-shadow: 0 2px 8px #0001;
-  height: clamp(200px, calc((100vh - 2rem)/3), 400px);
+  height: clamp(200px, calc((100vmin - 2rem)/3), 600px);
   flex-grow: 1;
   text-align: center;
   cursor: pointer;
@@ -86,11 +86,7 @@ h1 {
   overflow: hidden;
 }
 
-#album-list > .album-card:last-child{
-  height: auto !important;
-}
-
-#album-list > .album-card:nth-child(even){
+#album-list > .album-card:nth-child(2n+2){
   flex-grow: 2 !important;
 }
 
